--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
+  imageName: mypipelinehw
 
 stages:
 - stage: Build
@@ -20,10 +21,11 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '**/Dockerfile'
-        tags: |
-          $(tag)
+    - script: |
+        docker build -t $(dockerId).azurecr.io/$(imageName) .
+        docker login -u $(dockerId) -p $(pswd) $(dockerId).azurecr.io
+        docker push $(dockerId).azurecr.io/$(imageName)
+      env:
+        dockerId: $(ACRUser)
+        pswd: $(ACRPwd)
+
